[project]
name = "ULE_artmentorai_project"
dynamic = ["version"]
description = "A Python project"
authors = [{name = "Maxim Berchun"}]
maintainers = [
    { name = "Maxim Berchun", email = "mberch00@estudiantes.unileon.es" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { file="LICENSE" }


[project.scripts]
artmentorai-project = "ULE..artmentorai_project.cli:main"

[project.optional-dependencies]
test = [
  "hypothesis>=6.135.14",
  "pyfakefs>=5.9.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.23.7",
  "pytest-bdd==7.1.2",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
  "pytest-xdist[psutil]==3.8.0",
  "reportlab==4.2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
allow-insecure-host = ["github.com"]
default-groups = "all"
prerelease = "explicit"
python-downloads = "automatic"
python-preference = "only-managed"
keyring-provider = "subprocess"
index-strategy = "unsafe-best-match"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"
tag-pattern = "^(?P<version>(?!v)\\d+\\.\\d+\\.\\d+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/ULE"]

[tool.uv.pip]
allow-empty-requirements = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
authenticate = "never"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"
authenticate = "never"
explicit = true

[tool.docformatter]
recursive = true
wrap-summaries = 100
blank = true

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"

follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4

unsafe-fixes = true

target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["ALL"]
ignore = [
    "TID252",
    "TD",
    "FBT",
    "D100",
    "D104",
    "D105",
    "D107",
    "D202",
    "D203",
    "D205",
    "D212",
    "D401",
    "E203",
    "Q000",
    "Q003",
    "COM812",
    "ANN401",
    "PLE1205", # This needs to be disable for 'loguru'
]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
logger-objects = ["loguru.logger", "logging.getLogger"]

external = ["S"]                                             # Allow sonarlint exclusions

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = [
    "D",
    "S101",
    "PLR2004",
    "SLF001",
    "ANN",
    "E501",
    "PT019",
    "PT027",
    "PLR0913"
]
"**/__init__.py"= ["PLC0414"]

[tool.ruff.lint.isort]
known-first-party = ["ULE"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]
ignore-var-parameters = true

[tool.codespell]
skip = '*.po,*.ts,./src/3rdParty,./src/Test,test*'
count = false
quiet-level = 3

[tool.pytest.ini_options]
minversion = "7.0"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic\\._internal\\._config",
  "ignore::UserWarning:pydantic\\._internal\\._config",
]
pythonpath = "."
addopts = [
    '--import-mode=importlib',
    '--cov-report=html',
    '--cov-report=lcov',
    '--cov-report=term-missing',
    '--cov=src',
    '--junitxml=reports/junit/tests.xml',
    'tests',
    '-vvv',
    '--durations=10',
]
python_files = ['test_*.py']
python_functions = ['test_*']
testpaths = ["tests/itests", "tests/utests"]

[tool.coverage.run]
branch = true
parallel = true
sigterm = true
concurrency = ["multiprocessing", "thread"]
source = ["src"]
data_file = "reports/.coverage"
omit = ["**/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
include_namespace_packages = true
skip_empty = false
exclude_also = [
    'def __repr__',
    '@overload',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
    '^import ',
    '^from .* import ',
    '^__all__ = ',
]

[tool.coverage.html]
directory = "reports/coverage_html_report"

[tool.coverage.lcov]
output = "reports/coverage.lcov"
